--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ footer{
     text-align: left;
     color: aliceblue;
     align-items: center;
+    paddin-bottom: 1em;
 }
 h3{
     text-transform: uppercase;
