--- a/style.css
+++ b/style.css
@@ -21,18 +21,18 @@ nav ul, li{
     
 }
 nav, li a{
-    color: black;
+    color: white;
     list-style-type: none;
     text-decoration: none;
     align-items: center;
     padding: 5px;
     margin: 5px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 200;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: inline;
     text-align: center;
-    border-right: 2px solid black;
+    
     
 }
 nav li a:hover{
@@ -59,7 +59,7 @@ section{
     width: max-content;
     padding: 40px;
     border-radius: 20px;
-    
+    color: blue;
 }
 div{
     border-radius: 10px;
@@ -86,8 +86,8 @@ i{
     padding: 5px;
 }
 div:hover{
-    background-color: aquamarine;
-    color: darkgray;
+    background-color: ;
+    color: blue;
     
 }
 article{
@@ -103,7 +103,7 @@ footer{
     text-align: left;
     color: aliceblue;
     align-items: center;
-    paddin-bottom: 1em;
+    padding: 1em;
 }
 h3{
     text-transform: uppercase;
